--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>GoIt js HW 11 main</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
+    <div class="container">
+      <header>
+        <form class="js-form form">
+          <input
+            type="text"
+            name="query"
+            id="search input"
+            placeholder="Search images"
+            class="search-input"
+          />
+          <button type="submit" class="search-button">Search</button>
+        </form>
+      </header>
+      <main>
+        <div id="loader" class="hidden loading">Loading...</div>
+        <div id="gallery" class="gallery"></div>
+      </main>
+    </div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
