--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         </form>
       </header>
       <main>
-        <div id="loader" class="hidden loading">Loading...</div>
+        <div id="loader" class="hidden loader"></div>
         <div id="gallery" class="gallery"></div>
       </main>
     </div>
